[project]
name = "ramp-dev-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.25.2",
    "markdown>=3.8.2",
    "mcp>=1.12.4",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.1.0",
    "typing-extensions>=4.14.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
